syntax = "proto3";

option csharp_namespace = "LibraryManagement.Contract.Categories";

package librarymanagement;

service CategoryService {
  rpc GetCategories(CategorySearchRequest) returns (CategoryListResponse);
  rpc GetCategoryTree(CategoryTreeRequest) returns (CategoryTreeResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
}

message CategorySearchRequest {
  string search_term = 1;
  int64 parent_category_id = 2;
  bool is_active = 3;
}

message CategoryTreeRequest {
  bool include_inactive = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
  int64 parent_category_id = 3;
  int32 sort_order = 4;
}

message CategoryResponse {
  int64 category_id = 1;
  string name = 2;
  string description = 3;
  int64 parent_category_id = 4;
  string parent_category_name = 5;
  int32 sort_order = 6;
  bool is_active = 7;
  int32 book_count = 8;
  repeated CategoryResponse sub_categories = 9;
}

message CategoryListResponse {
  repeated CategoryResponse categories = 1;
}

message CategoryTreeResponse {
  repeated CategoryResponse categories = 1;
}
